# ERT-LAUNCH

./: .gitignore  Anchor.toml  README.md  advanced_arch.md  env.example  index.html  package.json  presale.md  whitepaper.md
backend/: ai_auditor.js  package.json  server.js
backend/tests/: auditor.test.js
client/: package.json
client/src/: advanced_client.ts  ert-token.ts  mining_bot.ts
client/tests/: client_tests.ts
config/: multisig.json  pyth_oracles.json
contracts/: Anchor.toml
contracts/migrations/: deploy.js
contracts/programs/ert_stablecoin/: Cargo.toml
contracts/programs/ert_stablecoin/src/: errors.rs  instructions.rs  lib.rs  state.rs
contracts/programs/ert_stablecoin/tests/: advanced_tests.rs  ert_stablecoin.rs
docs/: advanced_arch.md  api.md  whitepaper.md
scripts/: deploy.js  deploy_advanced.js  peg_adjust.js  zk_proof.js
